Add stub route to edit individual groups Add Modal Singleton

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,3 +4,15 @@
 @tailwind variants;
 
 html, body { @apply h-full overflow-hidden; }
+
+@layer base {
+    h1 {
+        @apply text-xl md:text-4xl font-bold;
+    }
+    h2 {
+        @apply text-lg md:text-3xl font-bold;
+    }
+    h3 {
+        @apply text-base md:text-2xl font-bold;
+    }
+}
